src/objects/Billing_Item__c.object
<CustomObject>
    <description>Elementi del piano di fatturazione dell&apos;opportunity</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Items</relationshipLabel>
        <relationshipName>Billing_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accrual_Year__c</fullName>
        <label>Accrual Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_date__c</fullName>
        <label>Approval date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Billing_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_to__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Address bill to</description>
        <inlineHelpText>If this field is empty will be filled automatically with the bill to account of the opportunity</inlineHelpText>
        <label>Bill to</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Items (Bill to)</relationshipLabel>
        <relationshipName>Billing_item_bill_to</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_with__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Selezionare il billing item correlato per fatturarli nella medesima fattura.</inlineHelpText>
        <label>Fatturare con</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3 AND 4 AND 8 AND (5 OR 6 OR 7)</booleanFilter>
            <filterItems>
                <field>Billing_Item__c.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <filterItems>
                <field>Billing_Item__c.Bill_with__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Billing_Item__c.Name</field>
                <operation>notContain</operation>
                <value>Not Touch</value>
            </filterItems>
            <filterItems>
                <field>Billing_Item__c.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <filterItems>
                <field>Billing_Item__c.Billing_status__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <filterItems>
                <field>Billing_Item__c.Billing_status__c</field>
                <operation>equals</operation>
                <value>Invoice in progress</value>
            </filterItems>
            <filterItems>
                <field>Billing_Item__c.Billing_status__c</field>
                <operation>equals</operation>
                <value>Invoiced</value>
            </filterItems>
            <filterItems>
                <field>Billing_Item__c.Billing_expected_date__c</field>
                <operation>equals</operation>
                <valueField>$Source.Billing_expected_date__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Billing_Item__c</referenceTo>
        <relationshipLabel>Billing Items</relationshipLabel>
        <relationshipName>Billing_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Item_ID__c</fullName>
        <description>Auto incremental ID for billing item</description>
        <displayFormat>Billing_{00000000}</displayFormat>
        <label>Billing Item ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Billing_amount__c</fullName>
        <label>Billing amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_date__c</fullName>
        <label>Data Fattura</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_expected_date__c</fullName>
        <label>Billing expected date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_item_description_for_tic__c</fullName>
        <inlineHelpText>Descrizione aggiuntiva del billing item per inserire dettagli a favore del cliente. Es. costi per risorsa</inlineHelpText>
        <label>Billing Item descrizione aggiuntiva TIC</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Billing_item_total__c</fullName>
        <formula>Billing_amount__c + Out_of_pocket_amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Importo totale del billing item da dover fatturare.</inlineHelpText>
        <label>Totale Billing Item</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_number__c</fullName>
        <label>Billing number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_status__c</fullName>
        <label>Billing status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>To be approved</fullName>
                    <default>true</default>
                    <label>To be approved</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Invoice in progress</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
                <value>
                    <fullName>Not to be invoiced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Da_Approvare__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Da Approvare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_scadenza__c</fullName>
        <inlineHelpText>Data calcolata automaticamente partendo dalla data di fattura e calcolando i giorni previsti nei termini di pagamento.</inlineHelpText>
        <label>Data scadenza</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Editable__c</fullName>
        <formula>IF( Residual__c = true, IMAGE(&apos;https://aeonvis.file.force.com/sfc/dist/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=068R2000004YC1F&amp;operationContext=DELIVERY&amp;contentId=05TR20000064NRV&amp;page=0&amp;d=/a/R2000000tG4A/IwX1vuh0a0LY0D0_lz9aZbcTMz0yg4gtu4ImWqU8TjM&amp;oid=00DUA000001Kj0X&amp;dpt=null&amp;viewId=&apos;, &apos;Editable no&apos;, 10, 10), IMAGE(&apos;https://aeonvis.file.force.com/sfc/dist/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=068R2000004Xuyp&amp;operationContext=DELIVERY&amp;contentId=05TR20000064ygb&amp;page=0&amp;d=/a/R2000000tHjN/YF_rIKIhJA_rYVdVk8EQNeTGNxqhe9bp.1Q7Qx7lGxk&amp;oid=00DUA000001Kj0X&amp;dpt=null&amp;viewId=&apos;, &apos;Editable yes&apos;, 10, 10))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Editable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_approvazione_cliente__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autorizzato/Pre-Autorizzato</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entrata_merci__c</fullName>
        <inlineHelpText>Informazione da inserire manualmente da parte dell&apos;amministrazione.</inlineHelpText>
        <label>Entrata merci</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inviata_a_TIC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inviata a TIC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_filename__c</fullName>
        <formula>CASE( Billing_status__c, 
&quot;Invoiced&quot;, &quot;FT&quot; &amp;  RIGHT(TEXT(YEAR(Billing_date__c)), 2) &amp; &quot;_&quot; + LPAD(Billing_number__c,4,&apos;0&apos;) &amp; &quot;_&quot; &amp; LPAD(TEXT(DAY(Billing_date__c)),2,&apos;0&apos;) &amp; &quot;-&quot; &amp; LPAD(TEXT(MONTH(Billing_date__c)),2,&apos;0&apos;) &amp; &quot;-&quot; &amp; TEXT(YEAR(Billing_date__c)) &amp; &quot;_&quot; +  Account__r.Name ,
&quot;&quot;
)</formula>
        <label>Invoice filename</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_status__c</fullName>
        <inlineHelpText>Stato della fattura riportata automaticamente da TIC.</inlineHelpText>
        <label>Stato della Fattura</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoiced_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoiced By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Billing_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoiced_timestamp__c</fullName>
        <label>Invoiced timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_update_by_TIC__c</fullName>
        <inlineHelpText>Data ultimo aggiornamento da parte di TIC.</inlineHelpText>
        <label>Ultimo aggiornamento da TIC</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Internal Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <label>Opportunity ID</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Opportunity of the Billing Item</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Billing Items</relationshipLabel>
        <relationshipName>Billing_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order_Amount__c</fullName>
        <label>Opportunity Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <formula>Opportunity__r.Order_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_number__c</fullName>
        <description>Order number of the opportunity</description>
        <inlineHelpText>Order number of the opportunity</inlineHelpText>
        <label>Order number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_pocket_amount__c</fullName>
        <inlineHelpText>Spese sostenute in relazione al presente contratto, da fatturare con il presente billing item.</inlineHelpText>
        <label>Spese di Trasferta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Out_of_pocket_desc__c</fullName>
        <inlineHelpText>Dettagli relativi alle spese di trasferta sostenute in merito a questa commessa, da voler fatturare con il relativo billing item.</inlineHelpText>
        <label>Descrizione spese di trasferta</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_terms__c</fullName>
        <inlineHelpText>Termini di pagamento riportati automaticamente dall&apos;opportunità.</inlineHelpText>
        <label>Termini di pagamento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>000DFFM</fullName>
                    <label>DATA FATTURA FINE MESE​</label>
                </value>
                <value>
                    <fullName>000DINR</fullName>
                    <label>DATE INVOICE RECEIPT​</label>
                </value>
                <value>
                    <fullName>15 GG DATA FATTURA</fullName>
                </value>
                <value>
                    <fullName>15 DAYS INVOICE DATE​</fullName>
                </value>
                <value>
                    <fullName>030DF-IT</fullName>
                    <label>30 GG DATA FATTURA ​</label>
                </value>
                <value>
                    <fullName>030DF-EN</fullName>
                    <label>30 DAYS INVOICE DATE​</label>
                </value>
                <value>
                    <fullName>030DFFM</fullName>
                    <label>30 GG DATA FATTURA FINE MESE</label>
                </value>
                <value>
                    <fullName>030FM-EN</fullName>
                    <label>30 DAYS END OF MONTH​</label>
                </value>
                <value>
                    <fullName>045DF</fullName>
                    <label>45 GG DATA FATTURA​</label>
                </value>
                <value>
                    <fullName>045DF-EN</fullName>
                    <label>45 DAYS INVOICE DATE​</label>
                </value>
                <value>
                    <fullName>045FDDF</fullName>
                    <label>45 GG DATA FATTURA FINE MESE</label>
                </value>
                <value>
                    <fullName>045FDDF-EN</fullName>
                    <label>45 DAYS INVOICE DATE END OF MONTH</label>
                </value>
                <value>
                    <fullName>060DF</fullName>
                    <label>60 GG DATA FATTURA​</label>
                </value>
                <value>
                    <fullName>060DF-EN</fullName>
                    <label>60 DAYS INVOICE DATE​</label>
                </value>
                <value>
                    <fullName>060DFFM</fullName>
                    <label>60 GG DATA FATTURA FINE MESE​</label>
                </value>
                <value>
                    <fullName>060DFFM-EN</fullName>
                    <label>60 DAYS INVOICE DATE END OF MONTH​</label>
                </value>
                <value>
                    <fullName>075</fullName>
                    <label>75 GG DATA FATTURA​</label>
                </value>
                <value>
                    <fullName>075-EN</fullName>
                    <label>75 DAYS INVOICE DATE​</label>
                </value>
                <value>
                    <fullName>090df</fullName>
                    <label>90 GG DATA FATTURA​</label>
                </value>
                <value>
                    <fullName>090df-EN</fullName>
                    <label>90 DAYS INVOICE DATE​</label>
                </value>
                <value>
                    <fullName>090DFFM</fullName>
                    <label>90 GG DATA FATTURA FINE MESE​</label>
                </value>
                <value>
                    <fullName>090FM-EN</fullName>
                    <label>90 DAYS END OF MONTH​</label>
                </value>
                <value>
                    <fullName>120DFFM</fullName>
                    <label>120 GG DATA FATTURA FINE MESE</label>
                </value>
                <value>
                    <fullName>120DFFM-EN</fullName>
                    <label>120 DAYS INVOICE DATE END OF MONTH</label>
                </value>
                <value>
                    <fullName>270DFFM</fullName>
                    <label>270 GG DATA FATTURA​</label>
                </value>
                <value>
                    <fullName>270DFFM-EN</fullName>
                    <label>270 DAYS INVOICE DATE​</label>
                </value>
                <value>
                    <fullName>COMP</fullName>
                    <label>In compensazione con fattura stornata​</label>
                </value>
                <value>
                    <fullName>COMPENG</fullName>
                    <label>To be compensated with reversed invoice</label>
                </value>
                <value>
                    <fullName>105DF</fullName>
                    <label>105 GG DATA FATTURA</label>
                </value>
                <value>
                    <fullName>0 DF</fullName>
                    <isActive>false</isActive>
                    <label>0 DF</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <label>Percent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Residual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIC_draft_no__c</fullName>
        <inlineHelpText>Numero della bozza che viene aggiornato automaticamente da TIC.</inlineHelpText>
        <label>Numero Bozza TIC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIC_invoice_no__c</fullName>
        <inlineHelpText>Numero della fattura che viene aggiornato automaticamente da TIC.</inlineHelpText>
        <label>Numero Fattura TIC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR_opportunity__c</fullName>
        <description>TR project ID dell&apos;opportunity</description>
        <label>TR project ID opportunity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tecnical_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tecnical Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tic_Invoice_Created_Date__c</fullName>
        <inlineHelpText>Data riportata automaticamente da TIC.</inlineHelpText>
        <label>Data Creazione Fatt. Tic</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VAT_Code__c</fullName>
        <inlineHelpText>L&apos;aliquota IVA viene inserita nel momento in cui il billing item viene spostato in Invoice in progress, tenendo conto delle informazioni presenti nell&apos;account.</inlineHelpText>
        <label>Codice IVA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>22</fullName>
                    <label>Aliquota 22%</label>
                </value>
                <value>
                    <fullName>N030201</fullName>
                    <label>Non imp. Art.8 c.1. lett.c. (esp.indir.lett.intento)</label>
                </value>
                <value>
                    <fullName>N060201</fullName>
                    <label>Aliquota 0% - Servizi art. 7ter – UE</label>
                </value>
                <value>
                    <fullName>N020202</fullName>
                    <label>Aliquota 0% - Servizi art.7ter – extraUE</label>
                </value>
                <value>
                    <fullName>0%</fullName>
                    <isActive>false</isActive>
                    <label>0%</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validit_dichiarazione_di_intenti__c</fullName>
        <formula>IF( ISBLANK(Account__r.Declaration_of_intent__c) ,
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 30, 30) ,

IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 30, 30))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ROSSO: L&apos;account a cui si fatturerà questo billing item ha la dichiarazione di intenti valida, avrà &quot;Non imp. Art.8 c.1. lett.c. (esp.indir.lett.intento)&quot;
VERDE: L&apos;account a cui si fatturerà questo item non ha la dichiarazione di intenti, se Italiano avrà IVA 22% altrimenti 0%.</inlineHelpText>
        <label>Validità dichiarazione di intenti</label>
        <type>Text</type>
    </fields>
    <label>Billing Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Billing_Item_ID__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity_ID__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Order_number__c</columns>
        <columns>NAME</columns>
        <columns>Billing_status__c</columns>
        <columns>Billing_date__c</columns>
        <columns>Billing_number__c</columns>
        <columns>Billing_amount__c</columns>
        <columns>Out_of_pocket_amount__c</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_Amministraz_Items_invoiced</fullName>
        <columns>Account__c</columns>
        <columns>Bill_to__c</columns>
        <columns>Opportunity_ID__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Order_Amount__c</columns>
        <columns>TR_opportunity__c</columns>
        <columns>Billing_amount__c</columns>
        <columns>Order_number__c</columns>
        <columns>NAME</columns>
        <columns>Out_of_pocket_amount__c</columns>
        <columns>Billing_number__c</columns>
        <columns>Billing_date__c</columns>
        <columns>Notes__c</columns>
        <columns>Billing_status__c</columns>
        <columns>Accrual_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Billing_status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>arena</value>
        </filters>
        <label>Amministraz - Items invoiced</label>
    </listViews>
    <listViews>
        <fullName>Current_billing_items_approved</fullName>
        <columns>Account__c</columns>
        <columns>Bill_to__c</columns>
        <columns>Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>Opportunity_ID__c</columns>
        <columns>Billing_amount__c</columns>
        <columns>Out_of_pocket_amount__c</columns>
        <columns>TR_opportunity__c</columns>
        <columns>Order_number__c</columns>
        <columns>Billing_expected_date__c</columns>
        <columns>Notes__c</columns>
        <columns>Billing_status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Billing_status__c</field>
            <operation>equals</operation>
            <value>To be approved,Approved,Invoice in progress</value>
        </filters>
        <filters>
            <field>Billing_expected_date__c</field>
            <operation>lessOrEqual</operation>
            <value>9/30/2024</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Not Touch</value>
        </filters>
        <filters>
            <field>Approved_By__c</field>
            <operation>notEqual</operation>
            <value>benedetto virzi,aristide nettuno,serena selvarolo,tommaso santini,giacomo d&apos;ippolito</value>
        </filters>
        <label>Amministraz - Items to be invoiced</label>
    </listViews>
    <listViews>
        <fullName>Current_month_billing_items</fullName>
        <columns>Account__c</columns>
        <columns>Bill_to__c</columns>
        <columns>Opportunity_ID__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Order_number__c</columns>
        <columns>NAME</columns>
        <columns>Billing_amount__c</columns>
        <columns>Out_of_pocket_amount__c</columns>
        <columns>Billing_expected_date__c</columns>
        <columns>Billing_status__c</columns>
        <columns>Accrual_Year__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Billing_expected_date__c</field>
            <operation>lessThan</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <filters>
            <field>Billing_status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Current month billing items ToBeInvoiced</label>
    </listViews>
    <listViews>
        <fullName>My_billing_items_invoiced</fullName>
        <columns>Account__c</columns>
        <columns>Bill_to__c</columns>
        <columns>Opportunity_ID__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Order_number__c</columns>
        <columns>NAME</columns>
        <columns>Billing_amount__c</columns>
        <columns>Billing_expected_date__c</columns>
        <columns>Billing_status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Billing_status__c</field>
            <operation>equals</operation>
            <value>Invoice in progress,Invoiced</value>
        </filters>
        <label>My billing items invoiced</label>
    </listViews>
    <listViews>
        <fullName>Opportunity_Billing_Item_plan</fullName>
        <booleanFilter>1 or 2 or 3</booleanFilter>
        <columns>Account__c</columns>
        <columns>Opportunity_ID__c</columns>
        <columns>Billing_status__c</columns>
        <columns>Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>Order_number__c</columns>
        <columns>Billing_number__c</columns>
        <columns>Billing_amount__c</columns>
        <columns>Out_of_pocket_amount__c</columns>
        <columns>Billing_expected_date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Billing_expected_date__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>Billing_date__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>Billing_expected_date__c</field>
            <operation>equals</operation>
            <value>LAST_YEAR</value>
        </filters>
        <label>Opportunity Billing Item plan</label>
    </listViews>
    <nameField>
        <label>Billing Item Name for TIC</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Amount_change_onlyif_tobeapproved</fullName>
        <active>true</active>
        <description>L&apos;amount del billing item può essere modificato solo se lo stato è to be approved</description>
        <errorConditionFormula>ISCHANGED( Billing_amount__c) &amp;&amp;
 Residual__c = false &amp;&amp;
OR( 
(NOT(ISCHANGED( Billing_status__c)) &amp;&amp; NOT(ISPICKVAL( Billing_status__c , &apos;To be approved&apos;) )),
ISCHANGED( Billing_status__c) &amp;&amp;  ISPICKVAL( PRIORVALUE(Billing_status__c) , &apos;To be approved&apos;)

)</errorConditionFormula>
        <errorDisplayField>Billing_amount__c</errorDisplayField>
        <errorMessage>You can only change Billing amount of a billing item in status &quot;To be approved&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Approve_validation</fullName>
        <active>false</active>
        <description>Non si può approvare un billing item se è cambiato il relativo amount o se il billing plan è aperto</description>
        <errorConditionFormula>AND (
ISCHANGED( Billing_status__c ),
ISPICKVAL(Billing_status__c , &apos;Approved&apos;),
OR(ISPICKVAL(Opportunity__r.Billin_Plan_Status__c, &apos;Open&apos;), ISBLANK(TEXT(Opportunity__r.Billin_Plan_Status__c))),
ISPICKVAL(PRIORVALUE(Billing_status__c ), &quot;To be approved&quot;)
)</errorConditionFormula>
        <errorDisplayField>Billing_status__c</errorDisplayField>
        <errorMessage>You can&apos;t approve a billing item if the opportunity billing status is open or if you changed the amount of the billing item</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Approve_validation_billto</fullName>
        <active>false</active>
        <description>Non si può approvare un billing item se il bill to è vuoto o non è legato all&apos;account commerciale</description>
        <errorConditionFormula>AND (
ISCHANGED( Billing_status__c ),
ISPICKVAL(Billing_status__c , &apos;Approved&apos;),
OR( ISBLANK( Bill_to__r.Id ),
    AND( Bill_to__r.Id &lt;&gt;  Account__r.Id ,  Bill_to__r.ParentId &lt;&gt; Account__r.Id)),
ISPICKVAL(PRIORVALUE(Billing_status__c ), &quot;To be approved&quot;)
)</errorConditionFormula>
        <errorDisplayField>Bill_to__c</errorDisplayField>
        <errorMessage>You can&apos;t approve a billing item if the bill to account is empty or bill to account is not equal or related to commercial account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Approve_validation_billto_NEW</fullName>
        <active>false</active>
        <description>Non si puo approvare un billing item se il contractor non è &apos;Aeonvis&apos; e il &apos;Bill to&apos; non è lo stesso del contractor. 
Non si può approvare un billing item se il bill to è vuoto o non è legato all&apos;account commerciale</description>
        <errorConditionFormula>IF(Opportunity__r.Partner__r.Name != &apos;Aeonvis&apos;,
AND(ISCHANGED( Billing_status__c ), ISPICKVAL(Billing_status__c , &apos;Approved&apos;), Opportunity__r.Partner__r.Name != &apos;Aeonvis&apos;, Bill_to__c != Opportunity__r.Partner__c),

(AND
(ISCHANGED( Billing_status__c ),
ISPICKVAL(Billing_status__c , &apos;Approved&apos;),
OR( ISBLANK( Bill_to__r.Id ),
AND( Bill_to__r.Id &lt;&gt; Account__r.Id , Bill_to__r.ParentId &lt;&gt; Account__r.Id)
),
ISPICKVAL(PRIORVALUE(Billing_status__c ), &quot;To be approved&quot;)
)
)
)</errorConditionFormula>
        <errorDisplayField>Bill_to__c</errorDisplayField>
        <errorMessage>If the contractor is not aeonvis the bill to must be the same as the contractor or You can&apos;t approve a billing item if the bill to account is empty or bill to account is not equal or related to commercial account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BillingNumber_billingDate_onlyIfApproved</fullName>
        <active>false</active>
        <description>Billing number e billing date possono essere compilati solo se stato billing item è approvato o invoice in progress</description>
        <errorConditionFormula>AND(
OR(
ISPICKVAL( Billing_status__c , &apos;To be approved&apos;),
ISPICKVAL( Billing_status__c , &apos;Not to be invoiced&apos;)
),
OR(
NOT(ISNULL( Billing_date__c )), NOT( ISBLANK(  Billing_number__c  ))
)
)</errorConditionFormula>
        <errorDisplayField>Billing_date__c</errorDisplayField>
        <errorMessage>You can&apos;t fill Billing number or Billing date if the item is in status &quot;To be approved&quot; or &quot;Not to be invoiced&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BillingNumber_billingDate_required</fullName>
        <active>true</active>
        <description>Se inserito il billing number, il billing date deve essere obbligatorio e viceversa</description>
        <errorConditionFormula>(OR(
AND( NOT(ISBLANK( Billing_number__c )), ISBLANK( Billing_date__c )),
AND( NOT(ISBLANK( Billing_date__c )), ISBLANK( Billing_number__c ))
))

&amp;&amp;

 Billing_amount__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Billing_number__c</errorDisplayField>
        <errorMessage>Billing date and billing number are both required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_Year_when_approved</fullName>
        <active>false</active>
        <description>The field Accrual Year must be filled in order to approve a billing item.</description>
        <errorConditionFormula>AND(ISPICKVAL(Billing_status__c, &quot;Approved&quot;),  ISPICKVAL( Accrual_Year__c,&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Accrual_Year__c</errorDisplayField>
        <errorMessage>Accrual Year is mandatory when Billing Status is &quot;Approved&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_expected_date_from_today</fullName>
        <active>false</active>
        <description>Billing extected date deve essere uguale o maggiore della data odierna</description>
        <errorConditionFormula>NOT(ISPICKVAL(Opportunity__r.Engagement_Type__c, &apos;T&amp;M&apos;))

&amp;&amp;

AND(
OR(
ISPICKVAL( Billing_status__c, &apos;To be approved&apos;) ,
ISPICKVAL( Billing_status__c, &apos;Approved&apos;)
),
Billing_expected_date__c &lt; (TODAY() -10)
)</errorConditionFormula>
        <errorDisplayField>Billing_expected_date__c</errorDisplayField>
        <errorMessage>Billing expected date can&apos;t be earlier than 10 days ago</errorMessage>
    </validationRules>
</CustomObject>